<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:background="@color/backgroundColor"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvInsert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insert"
        android:textColor="@color/tvColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <EditText
        android:id="@+id/insertVal"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="162dp"
        android:layout_height="47dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInsert" />

    <TextView
        android:id="@+id/showVal"
        android:layout_width="206dp"
        android:layout_height="61dp"
        android:clickable="false"
        android:elevation="8dp"
        android:shadowColor="#000000"
        android:textAlignment="center"
        android:textIsSelectable="false"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResult" />

    <Button
        android:id="@+id/decimalToRoman"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="135dp"
        android:layout_height="56dp"
        android:layout_marginBottom="8dp"
        android:text="@string/decimalToRoman"
        android:textColor="@color/fontColor"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/btnConvert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toEndOf="@+id/romanToDecimal"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/romanToDecimal"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="135dp"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#490101"
        android:text="@string/romanToDecimal"
        android:textColor="@color/fontColor"
        android:textColorLink="@android:color/secondary_text_dark"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toEndOf="@+id/pillarLeft"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showVal" />

    <Button
        android:id="@+id/btnConvert"
        android:layout_width="258dp"
        android:layout_height="78dp"
        android:layout_marginTop="8dp"
        android:elevation="8dp"
        android:shadowColor="#000000"
        android:text="@string/convert_button"
        android:textColor="@color/fontColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/romanToDecimal" />

    <Button
        android:id="@+id/copyBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Copy"
        android:textColor="@color/fontColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConvert" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/tvResult"
        android:textColor="@color/tvColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/insertVal" />

    <ImageView
        android:id="@+id/pillarLeft"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.50"
        app:srcCompat="@drawable/pillarleft" />

    <ImageView
        android:id="@+id/pillarRight"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/showVal"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pillarright" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="0dp"
        android:layout_height="74dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        ads:adUnitId="@string/banner_ad_unit_id"
        app:adSize="SMART_BANNER"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>